--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <title>Day 1 Take Home</title>
 </head>
 <body>
-    <h1>Theme Title</h1>
+    <div class=".parent">
+    <h1>Day2</h1>
+    
+    <div class=".card">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Bundles-Laptop-Go-2-Mouse-Complete?wid=380&hei=213&fit=crop">
+        <h2>Surface Laptop Go 2 bundle Mobile Mouse and Complete.
+        Up to 20% off Surface Laptop Go 2 Bundle
+        Get impressive on-the-go performance and extended coverage and support with Surface Laptop Go 2, Surface Mobile Mouse, and 3-year Microsoft Complete Protection Plan.
+        </h2>
+    </div>
+    <div class=".card">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Bundles-Laptop-Go-2-Mouse-Complete?wid=380&hei=213&fit=crop">
+        <h2>Surface Laptop Go 2 bundle Mobile Mouse and Complete.
+        Up to 20% off Surface Laptop Go 2 Bundle
+        Get impressive on-the-go performance and extended coverage and support with Surface Laptop Go 2, Surface Mobile Mouse, and 3-year Microsoft Complete Protection Plan.
+        </h2>
+    </div>
+    <div class=".card">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Bundles-Laptop-Go-2-Mouse-Complete?wid=380&hei=213&fit=crop">
+        <h2>Surface Laptop Go 2 bundle Mobile Mouse and Complete.
+        Up to 20% off Surface Laptop Go 2 Bundle
+        Get impressive on-the-go performance and extended coverage and support with Surface Laptop Go 2, Surface Mobile Mouse, and 3-year Microsoft Complete Protection Plan.
+        </h2>
+    </div>
+    <div class=".card">
+        <img src="https://cdn-dynmedia-1.microsoft.com/is/image/microsoftcorp/Content-Card-Bundles-Laptop-Go-2-Mouse-Complete?wid=380&hei=213&fit=crop">
+        <h2>Surface Laptop Go 2 bundle Mobile Mouse and Complete.
+        Up to 20% off Surface Laptop Go 2 Bundle
+        Get impressive on-the-go performance and extended coverage and support with Surface Laptop Go 2, Surface Mobile Mouse, and 3-year Microsoft Complete Protection Plan.
+        </h2>
+    </div>
+    </parent>
 
 </body>
 </html>
